[main] fixed overflow in card of product

--- a/src/features/card-product/ui/card/styles.module.sass
+++ b/src/features/card-product/ui/card/styles.module.sass
@@ -33,6 +33,7 @@
   color: #2C2D35
   font-size: 30px
   margin-top: 10px
+  word-wrap: break-word
 
 .productType
   margin-top: 8px
